registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
  - port: 5000
