registry/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: registry 
spec:
  rules:
  - host: registry.ns.wg 
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
